--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -8,6 +8,25 @@
     <script src="/script.js"></script> <!-- Cập nhật đường dẫn -->
     <title>Tính Z-score</title>
     <link rel="icon" href="/icon.png" type="image/png">
+<syle>
+	.gender-select {
+            display: flex;
+            justify-content: space-between;
+        }
+        .gender-select button {
+            width: 48%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #f0f0f0;
+            color: #000;
+        }
+        .gender-select button.active {
+            background-color: #1bb193;
+            color: #fff;
+        }
+</syle>
 </head>
 <body onload="highlightSelected('item6');">
    <div class="header">
@@ -39,7 +58,7 @@
         <a id="item3" href="/" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
 	<a id="item4" href="/" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
 	<a id="item5" href="/" onclick="loadPage('ibw.html'); highlightSelected('item5');">Ideal Body Weight</a>
-        <a id="item6" href="javascript:void(0)" onclick="loadPage('zscore-calculator'); highlightSelected('item6');">Z-Score</a>
+        <a id="item6" href="javascript:void(0)" onclick="highlightSelected('item6');">Z-Score</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
@@ -54,22 +73,23 @@
 	<div class="calculation-box">
           <h1>Tính Z-score</h1>
           <form id="zscore-form">
-            <label for="sex">Giới tính:</label>
-            <select id="sex" name="sex">
-                <option value="male">Nam</option>
-                <option value="female">Nữ</option>
-            </select>
+            <label for="gender">Sex</label>
+                <div class="gender-select">
+                    <button type="button" id="male-btn" onclick="selectGender('male')">Male</button>
+                    <button type="button" id="female-btn" onclick="selectGender('female')">Female</button>
+                </div>
+	    <input type="number" id="gender" name="age" required>
             <br>
-            <label for="age">Tuổi:</label>
+            <label for="age">Age (month):</label>
             <input type="number" id="age" name="age" required>
             <br>
-            <label for="height">Chiều cao (cm):</label>
+            <label for="height">Height (cm):</label>
             <input type="number" id="height" name="height" required>
             <br>
-            <label for="weight">Cân nặng (kg):</label>
+            <label for="weight">Weight(kg):</label>
             <input type="number" id="weight" name="weight" required>
             <br>
-            <button type="submit">Tính Z-score</button>
+            <button type="submit">Caculate</button>
         </form>
         <div id="result"></div>
 	</div>
