--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -8,25 +8,25 @@
     <script src="/script.js"></script> <!-- Cập nhật đường dẫn -->
     <title>Tính Z-score</title>
     <link rel="icon" href="/icon.png" type="image/png">
-<syle>
-	.gender-select {
-            display: flex;
-            justify-content: space-between;
-        }
-        .gender-select button {
-            width: 48%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-            background-color: #f0f0f0;
-            color: #000;
-        }
-        .gender-select button.active {
-            background-color: #1bb193;
-            color: #fff;
-        }
-</syle>
+	<style>
+		.gender-select {
+		    display: flex;
+		    justify-content: space-between;
+		}
+		.gender-select button {
+		    width: 48%;
+		    padding: 10px;
+		    border: 1px solid #ccc;
+		    border-radius: 5px;
+		    cursor: pointer;
+		    background-color: #f0f0f0;
+		    color: #000;
+		}
+		.gender-select button.active {
+		    background-color: #1bb193;
+		    color: #fff;
+		}
+	</style>
 </head>
 <body onload="highlightSelected('item6');">
    <div class="header">
