--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -78,7 +78,7 @@
                     <button type="button" id="male-btn" onclick="selectGender('male')">Male</button>
                     <button type="button" id="female-btn" onclick="selectGender('female')">Female</button>
                 </div>
-	    <input type="number" id="gender" name="age" required>
+	    <input type="hidden" id="gender" name="sex" required>
             <br>
             <label for="age">Age (month):</label>
             <input type="number" id="age" name="age" required>
