--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -9,6 +9,14 @@
     <title>Tính Z-score</title>
     <link rel="icon" href="/icon.png" type="image/png">
 	<style>
+		.zscore-form {
+		   margin-bottom: 20px;
+		}
+		.zscore-form label {
+                   display: block;
+                   margin-bottom: 5px;
+                   font-weight: bold;
+		}
 		.gender-select {
 		    display: flex;
 		    justify-content: space-between;
