--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -113,7 +113,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById('result').innerText = `Z-score: ${data.z_score}`;
+                document.getElementById('result').innerText = `BMI for Age: ${data.z_score}`;
             });
         });
     </script>
