--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -101,8 +101,8 @@
         </form>
         <div id="result">
 		<p id="bmiage-result"></p>
-                <p id="bmi-result"></p> <!-- Thêm phần tử để hiển thị BMI -->
-		<p id="wei-result"></p> 
+		<p id="wei-result"></p>
+                <p id="bmi-result"></p> <!-- Thêm phần tử để hiển thị BMI --> 
 	</div>
 	</div>
     </div>
@@ -119,7 +119,7 @@
             .then(data => {
 		document.getElementById('bmi-result').innerText = `BMI: ${data.bmi}`;
                 document.getElementById('bmiage-result').innerText = `BMI for Age: ${data.bmi_age}`;
-	        document.getElementById('wei-result').innerText = `BMI for Age: ${data.wei}`;
+	        document.getElementById('wei-result').innerText = `Weight for Age: ${data.wei}`;
             });
         });
     </script>
