--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -107,10 +107,10 @@
             <br> --> 
 		  
             <label for="height">Height (cm):</label>
-            <input type="number" id="height" name="height" required>
+            <input type="number" id="height" name="height" step="0.1" required>
             <br>
             <label for="weight">Weight(kg):</label>
-            <input type="number" id="weight" name="weight" required>
+            <input type="number" id="weight" name="weight" step="0.1" required>
             <br>
             <button type="submit">Caculate</button>
         </form>
@@ -125,10 +125,13 @@
     <script>
 	  // Đặt ngày hiện tại cho "Current Day" khi trang tải
 	  window.addEventListener('DOMContentLoaded', () => {
-	    const today = new Date();
-	    const formattedToday = formatDate(today);
-	    document.getElementById("current-day").valueAsDate = today;
-	    document.getElementById("current-day-formatted").value = formattedToday;
+		const today = new Date();
+		const formattedToday = formatDate(today);
+		document.getElementById("current-day").valueAsDate = today;
+		document.getElementById("current-day-formatted").value = formattedToday;
+		
+		// Đặt giới hạn cho ô "Date of Birth" để không cho phép chọn ngày sau ngày hiện tại
+		document.getElementById("dob").setAttribute("max", today.toISOString().split("T")[0]);
 	  });
 	
 	  // Hàm định dạng ngày thành dd/mm/yyyy
