--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -18,10 +18,12 @@
                    font-weight: bold;
 		}
 		.gender-select {
+	            margin-top: 10px;
 		    display: flex;
 		    justify-content: space-between;
 		}
 		.gender-select button {
+		    
 		    width: 48%;
 		    padding: 10px;
 		    border: 1px solid #ccc;
