--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -68,7 +68,7 @@
                     <button type="button" id="female-btn" onclick="selectGender('female')">Female</button>
                 </div>
 	    <input type="hidden" id="gender" name="sex" required>
-	    <span id="gender-error" style="color: red; display: none;">Please select a gender.</span>
+	    <span id="gender-error" style="margin-bottom: 5px; color: red; display: none;">Please select a gender.</span>
             <br>
 
 	<div class="container_date_input">
@@ -83,7 +83,7 @@
 	        <input type="text" id="current-day-formatted" readonly placeholder="dd/mm/yyyy" onclick="document.getElementById('current-day').showPicker()">
 	    </div>
 	</div>
-	<div id="age-display" style="font-weight: bold; color: red;"></div>
+	<div id="age-display" style="margin-bottom: 10px; font-weight: bold; color: red;"></div>
 	    <!--  
             <label for="age">Age (month):</label>
             <input type="number" id="age" name="age" required>
