--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -9,6 +9,7 @@
     <title>Tính Z-score</title>
     <link rel="icon" href="/icon.png" type="image/png">
     <style>
+	 p { margin-top: 4px; margin-bottom: 4px; padding-left: 5px; }
         .zscore-form { margin-bottom: 20px; }
         .zscore-form label { display: block; margin-bottom: 5px; font-weight: bold; }
         .gender-select { margin-top: 10px; display: flex; justify-content: space-between; }
