--- a/ibw.html
+++ b/ibw.html
@@ -71,7 +71,7 @@
             <form id="ibw-form">
                 <div class="form-group">
                 <label for="gender">Sex</label>
-                <div class="gender-select">
+                <div class="select-group">
                     <button type="button" id="male-btn" onclick="selectGender('male')">Male</button>
                     <button type="button" id="female-btn" onclick="selectGender('female')">Female</button>
                 </div>
