--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -119,7 +119,7 @@
             <button type="submit">Caculate</button>
         </form>
 	<div id="result" class="result-container">
-		<div style="font-size: 1.17em; font-weight: bold; margin-top: 4px; margin-bottom: 4px; padding-left: 5px;">Result:</div>
+		<div style="font-size: 1.17em; font-weight: bold; margin-bottom: 8px; padding-left: 5px;">Result:</div>
 		<p id="text1">Please fill out required fields.</p>
 		<div id="resultZS" style="display: none;">
 		<div class="result-item">
