--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -65,7 +65,7 @@
         <a id="item3" href="/" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
 	<a id="item4" href="/" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
 	<a id="item5" href="/" onclick="loadPage('ibw.html'); highlightSelected('item5');">Ideal Body Weight</a>
-        <a id="item6" href="javascript:void(0)" onclick="highlightSelected('item6');">Z-Score</a>
+        <a id="item6" href="javascript:void(0)" onclick="highlightSelected('item6');">WHO Z-Score</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
@@ -115,7 +115,7 @@
             <label for="weight">Weight(kg):</label>
             <input type="number" id="weight" name="weight" step="0.1" required>
             <br>
-            <button type="submit">Caculate</button>
+            <button type="submit">Calculate</button>
         </form>
 	<div id="result" class="result-container">
 		<div style="font-size: 1.17em; font-weight: bold; margin-bottom: 8px; padding-left: 5px;">Result:</div>
