--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 			7.5H7C7.55229 7.5 8 7.94772 8 8.5C8 9.05229 7.55229 9.5 7 9.5H6C5.44772 9.5 5 9.05229 5 8.5ZM5 12C5 11.4477 5.44772 11 6 11H7C7.55229 11 8 11.4477 8 12C8 
 			12.5523 7.55229 13 7 13H6C5.44772 13 5 12.5523 5 12Z" fill="#FFFFFF"/>
         </svg>
-			<span class="tooltip-text">Mở Sidebar</span>
+		<span class="tooltip-text">Mở Sidebar</span>
         </div>
+	<div class="header-title"> MEDICAL CALCULATOR </div>
     </div>
 
     <div id="mySidebar" class="sidebar"> 
