--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -127,6 +127,7 @@
 			<p id="bmiage-result"></p>
 			<p id="wei-result"></p>
 			<p id="lenhei_age_result"></p>
+			<p id="weight_lenhei_result"></p>
 		</div>
 		</div>                
 	</div>	
@@ -252,7 +253,7 @@
                 document.getElementById('bmiage-result').innerText = `BMI for Age: ${data.bmi_age}`;
                 document.getElementById('wei-result').innerText = `Weight for Age: ${data.wei}`;
 		document.getElementById('lenhei_age_result').innerText = `Height for Age: ${data.lenhei_age}`;
-		//document.getElementById('weight_lenhei_result').innerText = `Height for Age: ${data.weight_lenhei}`;
+		document.getElementById('weight_lenhei_result').innerText = `Weight for Lenght: ${data.wfh}`;
             });
 	document.getElementById('text1').style.display = 'none'; // Ẩn placeholder
 	document.getElementById('resultZS').style.display = 'flex'; // Hiển thị kết quả
