--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -99,7 +99,7 @@
 	        </select>
 	    </div>
 	    
-	    <div id="dob-container" class="input-row" style= "visibility: hidden;">
+	    <div id="dob-container" class="input-row">
 	        <div id="dob-input" class="field_date_input">
 	            <label for="dob">Date of Birth:</label>
 	            <input type="date" id="dob" name="dob" required style="display: none;">
